# rag_llamaindex

./: .gitignore  README.md  access_config.json  chat_cli.py  config.py  config.toml  doc_state.json  main.py  pyproject.toml  rag.py  test_rag.py
data/: compare.txt  test.docx  test.md  test.txt  text.txt
data/test_chunking/: test.txt
src/: chat_cli.py  doc_parser.py  image_captioning.py  rag.py  test_cerebras.py
tests/: test_chunking.py  test_embedding_models.py  test_embeddings_speed.py  test_searching.py  test_vector_stores.py  test_vs_perfomance.py
