[project]
name = "test"
version = "0.1.0"
description = "Intelligent question-answering systems over your documents using Retrieval-Augmented Generation (RAG), LlamaIndex. Ingest PDFs, TXT, and more—query with context-aware responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "llama-index>=0.14.9",
    "llama-index-core>=0.14.9",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-cerebras>=0.3.1",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-vector-stores-chroma>=0.5.3",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.1.2",
]
