[project]
name = "test"
version = "0.1.0"
description = "Intelligent question-answering systems over your documents using Retrieval-Augmented Generation (RAG), LlamaIndex. Ingest PDFs, TXT, and more—query with context-aware responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awadb>=0.3.13",
    "beautifulsoup4>=4.14.3",
    "cerebras-cloud-sdk>=1.59.0",
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.1",
    "google-genai>=1.53.0",
    "groq>=0.37.1",
    "lancedb>=0.25.3",
    "llama-index>=0.14.9",
    "llama-index-core>=0.14.9",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-cerebras>=0.3.1",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-vector-stores-awadb>=0.4.1",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-vector-stores-elasticsearch>=0.5.1",
    "llama-index-vector-stores-epsilla>=0.4.1",
    "llama-index-vector-stores-faiss>=0.5.1",
    "llama-index-vector-stores-lancedb>=0.4.2",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "markdown>=3.10",
    "numpy>=2.3.5",
    "pillow>=10.4.0",
    "pydantic>=2.12.5",
    "pyepsilla>=0.3.15",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "xformers>=0.0.33.post1",
]
